--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
+        <div class="control_range">
+            <input type="range" name="" id="jsRange" min="0.1" max="5" value="2.5" step="0.05" />
+        </div>
+        <div class="controls_btns">
+            <button id="jsMode">Fill</button>
+            <button id="jsSave">Save</button>
+        </div>
         <div class="controls_colors" id="jsColors">
             <div class="controls_color" style=background-color:#2c2c2c></div>
             <div class="controls_color" style=background-color:white></div>
