--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="controls_colors" id="jsColors">
             <div class="controls_color" style=background-color:#2c2c2c></div>
             <div class="controls_color" style=background-color:white></div>
-            <div class="controls_color" style=background-color:#ff3b30></div>
+            <div class="controls_color" style=background-color¬ø:#ff3b30></div>
             <div class="controls_color" style=background-color:#ff9500></div>
             <div class="controls_color" style=background-color:#ffcc00></div>
             <div class="controls_color" style=background-color:#4cd963></div>
@@ -31,9 +31,9 @@
     </div>
 
 
+ 
 
-
-    <script src="app.js"></script>
+    <script src="app.js"></script>¬ø
 </body>
 
 </html>
